Add API token approach for service api authorization (#11)
